| Summary: | ASTERISK-28790: Crash during conference call using confbridge and video | ||
| Reporter: | Pascal Cadotte Michaud (pc-m) | Labels: | patch webrtc |
| Date Opened: | 2020-03-24 09:51:01 | Date Closed: | 2020-03-26 08:33:05 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Applications/app_confbridge Resources/res_pjsip |
| Versions: | 17.3.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Debian Buster (10.3) libsrtp 1.5.4 x86_64 | Attachments: | ( 0) ASTERISK-28790-2.diff ( 1) bt-threads-2.txt ( 2) full.log |
| Description: | After upgrading from Asterisk 16.8.0 to 17.3.0 we have been experiencing crashes during video conference calls. After some time with 2 or more participants in the conference asterisk crashes with a SIGABRT or SIGSEGV. The traceback looks different most of the time but seems to be memory related in all cases.
#3 0x00007f120b623c1a in malloc_printerr (str=str@entry=0x7f120b72a3d8 "malloc(): invalid size (unsorted)") at malloc.c:5341 #3 0x00007f3a7462fc1a in malloc_printerr (str=str@entry=0x7f3a74736018 "double free or corruption (!prev)") at malloc.c:5341 #3 0x00007f677c329c1a in malloc_printerr (str=str@entry=0x7f677c42fbf8 "munmap_chunk(): invalid pointer") at malloc.c:5341 confbridge.conf [wazo_default_bridge] type = bridge video_mode = sfu enable_events = yes [wazo_default_user] dsp_drop_silence = yes type = user talk_detection_events = yes send_events = yes echo_events = yes [wazo-bridge-profile-6](wazo_default_bridge) type = bridge max_members = 50 record_conference = no pjsip.conf [hn84pvxh](wazo-general-endpoint) type = endpoint allow = !all,opus,g722,alaw,ulaw,vp9,vp8,h264 direct_media = no transport = transport-wss max_audio_streams = 10 max_video_streams = 10 webrtc = yes | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-03-24 09:51:02.291-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Pascal Cadotte Michaud (pc-m) 2020-03-24 09:55:24.308-0500 I'm attaching the output of gdb -batch -ex "bt full" -ex "thread apply all bt" on one of the core dump file By: Pascal Cadotte Michaud (pc-m) 2020-03-24 10:00:13.277-0500 full log of the 2 minutes before the crash By: Joshua C. Colp (jcolp) 2020-03-24 10:33:39.245-0500 Give this attached patch a whirl. By: nappsoft (nappsoft) 2020-03-24 10:35:37.803-0500 Similar problem here after upgrading from 16.7.0 to 16.9.0 (might have to do with the following commit? https://github.com/asterisk/asterisk/commit/47658a0a2bacbecb06cdb065429017dc91f4cf68) By: Joshua C. Colp (jcolp) 2020-03-24 11:20:57.259-0500 Actually, I need to tweak this a bit more. By: Joshua C. Colp (jcolp) 2020-03-24 11:27:55.903-0500 There we go - an updated patch. By: Pascal Cadotte Michaud (pc-m) 2020-03-24 14:16:45.097-0500 Hi Josh, we have not been able to reproduce the crash with your patch. Thanks By: nappsoft (nappsoft) 2020-03-24 14:37:33.043-0500 Here it seems to work stable with the patch applied as well By: Friendly Automation (friendly-automation) 2020-03-26 08:33:06.057-0500 Change 14014 merged by Friendly Automation: res_rtp_asterisk: Ensure sufficient space for worst case NACK. [https://gerrit.asterisk.org/c/asterisk/+/14014|https://gerrit.asterisk.org/c/asterisk/+/14014] By: Friendly Automation (friendly-automation) 2020-03-26 08:37:54.939-0500 Change 14022 merged by Joshua Colp: res_rtp_asterisk: Ensure sufficient space for worst case NACK. [https://gerrit.asterisk.org/c/asterisk/+/14022|https://gerrit.asterisk.org/c/asterisk/+/14022] By: Friendly Automation (friendly-automation) 2020-03-26 08:38:15.172-0500 Change 14015 merged by Joshua Colp: res_rtp_asterisk: Ensure sufficient space for worst case NACK. [https://gerrit.asterisk.org/c/asterisk/+/14015|https://gerrit.asterisk.org/c/asterisk/+/14015] By: Friendly Automation (friendly-automation) 2020-03-26 08:38:39.742-0500 Change 14016 merged by Joshua Colp: res_rtp_asterisk: Ensure sufficient space for worst case NACK. [https://gerrit.asterisk.org/c/asterisk/+/14016|https://gerrit.asterisk.org/c/asterisk/+/14016] | ||